@@ -33,6 +33,10 @@
 			<Key dockName="NOTES" />
 			<RelativePosition x="0.6" y="0.7" w="0.4" h="0.3" />
 		</Dockable>
+		<Dockable>
+			<Key dockName="COMMENTS" />
+			<RelativePosition x="0.6" y="0.7" w="0.4" h="0.3" />
+		</Dockable>
 	</Border>
 
 	<TabGroups></TabGroups>
